fixed some problems might caught program goes into dead loop

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ GTA V Script Decompiler/Resources/Entities2.dat
 /.vs/GTA V Script Decompiler/v16/Server/sqlite3/storage.ide
 /.vs/GTA V Script Decompiler/v16/Server/sqlite3/storage.ide-shm
 /.vs/GTA V Script Decompiler/v16/Server/sqlite3/storage.ide-wal
+/.vs/GTA V Script Decompiler/v16/Browse.VC.opendb
